@@ -73,8 +73,6 @@ setup(name='zope.app.security',
                         'zope.component',
                         'zope.configuration',
                         'zope.container',
-                        'zope.deferredimport',
-                        'zope.deprecation',
                         'zope.i18n',
                         'zope.i18nmessageid',
                         'zope.interface',
