@@ -1,7 +1,0 @@
-# This module has moved to zope.security.adapter
-# and will go away in Zope 3.5
-import zope.deprecation
-zope.deprecation.moved(
-    'zope.security.adapter',
-    "Zope 3.5",
-    )
